--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/morgan": "^1.9.9",
+    "@types/ncp": "^2.0.8",
     "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^2.0.11",
     "@types/swagger-jsdoc": "^6.0.1",
