BHIVE-103 set mongodb prod uri

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=4000
 NODE_ENV=development
 HOST="http://127.0.0.1"
 
-MONGODB_URL="mongodb://mongodb:27017/beehave-api-db-prod"
+MONGODB_URL=mongodb+srv://Bafode224:B%40fode224gn@cluster0.f3ko5ib.mongodb.net/beehavedb?retryWrites=true&w=majority
 MONGODB_URL_DEV=mongodb+srv://Bafode224:B%40fode224gn@cluster0.f3ko5ib.mongodb.net/beehavedb?retryWrites=true&w=majority
 
 
