--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "restapi-nodejs-boilerplate",
   "version": "1.0.0",
-  "description": "Modular Node.js RestAPI with typescript boilerplate",
+  "description": "Modular Node.js RestAPI with typescript boilerplate for Beehive Application",
   "main": "src/index.ts",
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/djibril6/restapi-nodejs-boilerplate.git"
+    "url": "git+https://github.com/bafode/lean_startup_backend.git"
   },
   "keywords": [
     "node",
@@ -37,9 +37,9 @@
   "author": "Djibril ISSOUFOU MAMAN <idjibrilmaman@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/djibril6/restapi-nodejs-boilerplate/issues"
+    "url": "https://github.com/bafode/lean_startup_backend/issues"
   },
-  "homepage": "https://github.com/djibril6/restapi-nodejs-boilerplate#readme",
+  "homepage": "https://github.com/bafode/lean_startup_backend.git#readme",
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "@types/multer": "^1.4.11",
