BEEHIVE-64 fix login issue

--- a/.env
+++ b/.env
@@ -13,13 +13,18 @@ TOKEN_RESET_PASSWORD_EXPIRATION_MINUTES=10
 TOKEN_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
 
-SENDGRID_API_KEY="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"
+SENDGRID_API_KEY="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"
 
 #cloudinary variables
 CLOUDINARY_CLOUD_NAME="dtqimnssm"
 CLOUDINARY_API_KEY="728138553812163"
 CLOUDINARY_API_SECRET="VtiKZZ4FEEOY4PdcmcvMlCPhpeo"
 CLOUDINARY_START_FOLDER="beehive"
+
+#smtp
+#email sender
+EMAIL_USER=salemshahdev@gmail.com
+EMAIL_PASS=kBKRrvjxVCptW9N4
 
 
     
