BHIVE-19 forgot password

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ TOKEN_RESET_PASSWORD_EXPIRATION_MINUTES=10
 TOKEN_VERIFY_EMAIL_EXPIRATION_MINUTES=10
 
 
-SENDGRID_API_KEY="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"
+SENDGRID_API_KEY="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"
 
 #cloudinary variables
 CLOUDINARY_CLOUD_NAME="dtqimnssm"
