--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
-    "dev": "cross-env NODE_ENV=development nodemon -L src/index.ts",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "build": "tsc -b . && npm run copy-static-assets",
     "copy-static-assets": "ts-node copyStaticAssets.ts",
     "test": "jest -i --colors --verbose --detectOpenHandles",
