--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,11 +1,17 @@
 version: '3.8'
 
 services:
-  node-app:
-    build: .
-    container_name: res-node-beehive-backend-dev
+  beehive-backend-dev:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+      target: dev
+    container_name: node-beehive-backend-dev
     command: yarn run dev -L
     env_file:
       - .env
+    volumes:
+      - ./:/usr/share/nginx/html
+      - ./node_modules:/node_modules/ 
     ports:
-      - "${PORT}:${PORT}"
+      - "4000:4000"
