--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,14 @@
 version: '3.8'
 
 services:
-  node-app:
-    build: .
-    container_name: res-node-beehive-backend-prod
-    command: yarn start
+  beehive-backend-prod:
+    container_name: beehive-backend-prod
+    build: 
+      context: .
+      dockerfile: Dockerfile
+      target: prod
     env_file:
       - .env
     ports:
-      - "${PORT}:${PORT}"
+      - 8080:80
+ 
