--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "lint:fix": "eslint . --fix",
     "coverage": "jest -i --coverage",
     "coverage:coveralls": "jest -i --coverage --coverageReporters=text-lcov | coveralls",
-    "docker:prod": "docker-compose -f docker-compose.yml -f docker-compose.prod.yml up",
-    "docker:dev": "docker-compose -f docker-compose.yml -f docker-compose.dev.yml up",
-    "docker:test": "docker-compose -f docker-compose.yml -f docker-compose.test.yml up",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up",
+    "docker:dev": "docker-compose  -f docker-compose.dev.yml up",
+    "docker:test": "docker-compose -f docker-compose.test.yml up",
     "prepare": "husky install"
   },
   "repository": {
