--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   beehive-backend-dev:
+    image: beehive-backend-dev
     build: 
       context: .
       dockerfile: Dockerfile
@@ -10,8 +11,8 @@ services:
     command: yarn run dev -L
     env_file:
       - .env
-    volumes:
-      - ./:/usr/share/nginx/html
-      - ./node_modules:/node_modules/ 
     ports:
       - "4000:4000"
+    volumes:
+      - .:/app
+      - /app/node_modules
