--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -2,5 +2,6 @@ version: '3'
 
 services:
   node-app:
+    image: beehive-backend-test
     container_name: res-node-beehive-backend-test
     command: yarn test
