--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: 🐳 Build Production Image from Docker Compose
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
-          docker compose -f docker-compose.dev.yml build
+          docker compose -f docker-compose.dev.yml build --no-cache --progress=plain
           docker tag beehive-backend-dev beehive/deployed-app:production
           docker push beehive/deployed-app:production
         env:
