--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   beehive-backend-dev:
+    image: beehive-backend-dev
     build: 
       context: .
       dockerfile: Dockerfile
