BHIVE-111 fix ci cd

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,14 +41,14 @@ jobs:
       - name: 🐳 Build Production Image from Docker Compose
         if: ${{ github.ref == 'refs/heads/main' }}
         run: |
-          docker compose -f docker-compose.dev.yml build
-          docker tag beehive-backend-dev beehive/deployed-app:production
-          docker push beehive/deployed-app:production
+          docker compose -f docker-compose.dev.yml build 
+          docker tag beehive-backend-dev bafode/beehive-backend-dev:latest
+          docker push bafode/beehive-backend-dev:latest
         env:
           DOCKER_BUILDKIT: 1
 
       # Manage cache
-      - name: 🚚 Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+      # - name: 🚚 Move cache
+      #   run: |
+      #     rm -rf /tmp/.buildx-cache
+      #     mv /tmp/.buildx-cache-new /tmp/.buildx-cache
