--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,15 @@ jobs:
         with:
           host: ${{ secrets.VPS_IP }}
           username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT }}
           script: |
             # Arrêter et supprimer l'ancien conteneur s'il existe
             docker stop beehive-container || true
             docker rm beehive-container || true
+
+            # Supprimer les anciennes images inutilisées
+            docker image prune -f || true
             
             # Tirer la dernière image depuis Docker Hub
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/beehive-backend-dev:latest
