--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "@types/multer": "^1.4.11",
+    "agora-access-token": "^2.0.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.0",
     "compression": "^1.7.4",
@@ -50,6 +51,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
+    "firebase-admin": "^13.0.1",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
     "joi": "^17.4.2",
