--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
     "@types/cookie-parser": "^1.4.8",
+    "@types/joi": "^17.2.3",
     "@types/multer": "^1.4.11",
     "agora-access-token": "^2.0.4",
     "bcryptjs": "^2.4.3",
@@ -51,16 +52,16 @@
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.4.7",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.1.0",
-    "firebase-admin": "^13.0.1",
+    "firebase-admin": "^13.2.0",
     "helmet": "^4.6.0",
     "http-status": "^1.5.0",
-    "joi": "^17.4.2",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
-    "mongoose": "^6.0.12",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
