--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
     uses: ./.github/workflows/test.yml
     secrets:
       ENV_FILE_CONTENT: ${{ secrets.ENV_FILE_CONTENT }}
+      SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
 
   build:
     name: 🐳 Build
