--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,14 @@
 name: 🧪 Test and Coverage
-
 on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main, develop ]
   workflow_call:
     secrets:
       ENV_FILE_CONTENT:
+        required: true
+      SERVICE_ACCOUNT_JSON:
         required: true
 
 jobs:
@@ -16,12 +21,9 @@ jobs:
         ports:
           - 27017:27017
     steps:
-      - name: 🛑 Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.12.1
-      
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
-      
+
       - name: 🔧 Setup Node.js
         uses: actions/setup-node@v3
         with:
@@ -33,6 +35,9 @@ jobs:
 
       - name: 🔧 Create .env file
         run: echo "${{ secrets.ENV_FILE_CONTENT }}" > .env
+
+      - name: 📝 Create service-account.json
+        run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > src/config/service-account.json
 
       - name: 🧪 Run tests
         run: yarn test
